# mcp-c

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  vcpkg.json
export/: CMakeLists.txt
src/: export.cpp  generated_bridge_code.c  generated_function_signatures.c  main.c
src/base/: base_func.c  base_func.h  mcp.c  mcp.h
src/include/: export_macro.h  function_signature.h  generated_func.h  generated_function_signatures.h
src/mcp_server/: file.c  file.h
src/mcp_server/base/: mcp.c  mcp.h
src/mcp_server/filesystems/: file.c  file.h
